--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1> 活动入口 </h1>
-</body>
-</html>
+{template 'common/header'}
+活动
+{template 'common/footer'}
