活动报名模块

--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -40,7 +40,7 @@
 </div>
 
 
-{php echo tpl_ueditor('')}
+{php echo tpl_ueditor('../')}
 <script type="text/javascript">
     <!--
     // ueditoroption 这个变量是微擎定义好的百度编辑器的初始化参数，直接使用即可
