--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动介绍</label>
                 <div class="col-sm-10">
-                    {php echo tpl_ueditor('content');}
+                    {php echo tpl_ueditor('content', $set['content']);}
                 </div>
             </div>
 
