--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -1,4 +1,5 @@
 {template 'common/header'}
+<link rel="stylesheet" href="/web/resource/components/ueditor/themes/default/css/ueditor.css">
 <div class="panel panel-default">
     <div class="panel-heading">编辑活动</div>
     <div class="panel-body">
