--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -3,11 +3,11 @@
 <div class="panel panel-default">
     <div class="panel-heading">编辑活动</div>
     <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="" method="">
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">活动名称</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
+                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入活动名称">
                 </div>
             </div>
             <div class="form-group">
@@ -27,12 +27,14 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动介绍</label>
                 <div class="col-sm-10">
-                    {php echo tpl_ueditor('content', $set['content']);}
+                    <!--{php echo tpl_ueditor('content', $set['content']);}-->
+                    <input type="text" name="desc">
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
+                    {php token();}
                     <button type="submit" class="btn btn-default">Sign in</button>
                 </div>
             </div>
