--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -7,20 +7,22 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">活动名称</label>
                 <div class="col-sm-10">
-                    <input type="text" name="title" class="form-control" id="inputEmail3" placeholder="请输入活动名称">
+                    <input type="text" name="title" value="{$activity['title']}" class="form-control" id="inputEmail3" placeholder="请输入活动名称">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动图片</label>
                 <div class="col-sm-10">
-                    {php echo tpl_form_field_image('thumb');}
+                    {php echo tpl_form_field_image('thumb',{$activity['thumb']});}
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动时间</label>
                 <div class="col-sm-10">
-                    {php echo tpl_form_field_daterange('activity_time');}
+                    {php echo tpl_form_field_daterange('activity_time',array('start'=>$activity['start_time'],
+                    'end'=>$activity['end_time']
+                    ));}
                 </div>
             </div>
 
@@ -28,7 +30,7 @@
                 <label for="inputPassword3" class="col-sm-2 control-label">活动介绍</label>
                 <div class="col-sm-10">
 
-                    <input type="text" name="info">
+                    <input type="text" name="info" value="{$acticity['info']}">
                 </div>
             </div>
 
