--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -22,7 +22,8 @@
                 <div class="col-sm-10">
                     {php echo tpl_form_field_daterange('activity_time',array('start'=>$activity['start_time'],
                     'end'=>$activity['end_time']
-                    ));}
+                    )
+                    );}
                 </div>
             </div>
 
@@ -30,7 +31,7 @@
                 <label for="inputPassword3" class="col-sm-2 control-label">活动介绍</label>
                 <div class="col-sm-10">
 
-                    <input type="text" name="info" value="{$acticity['info']}">
+                    <input type="text" name="info" value="{$activity['info']}">
                 </div>
             </div>
 
