--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动图片</label>
                 <div class="col-sm-10">
-                    {php echo tpl_form_field_image('thumb',{$activity['thumb']});}
+                    {php echo tpl_form_field_image('thumb',$activity['thumb']);}
                 </div>
             </div>
 
