--- a/addons/happy_activity/template/activityManage.html
+++ b/addons/happy_activity/template/activityManage.html
@@ -20,10 +20,7 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">活动时间</label>
                 <div class="col-sm-10">
-                    {php echo tpl_form_field_daterange('activity_time',array('start'=>$activity['start_time'],
-                    'end'=>$activity['end_time'])
-
-                    );}
+                    {php echo tpl_form_field_daterange('activity_time');}
                 </div>
             </div>
 
