--- a/addons/happy_activity/template/mobile/entry.html
+++ b/addons/happy_activity/template/mobile/entry.html
@@ -4,10 +4,26 @@
 
 
 <div class="panel panel-default">
-    <div class="panel-heading">Panel heading without title</div>
+    <div class="panel-heading">活动名称</div>
     <div class="panel-body">
         Panel content
     </div>
 </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">活动时间</div>
+    <div class="panel-body">
+        Panel content
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">详细内容</div>
+    <div class="panel-body">
+        Panel content
+    </div>
+</div>
+
+<a class="btn btn-danger">报名</a>
 
 {template 'common/footer'}
