--- a/addons/happy_activity/template/mobile/entry.html
+++ b/addons/happy_activity/template/mobile/entry.html
@@ -6,21 +6,21 @@
 <div class="panel panel-default">
     <div class="panel-heading">活动名称</div>
     <div class="panel-body">
-        Panel content
+        {$activity['title']}
     </div>
 </div>
 
 <div class="panel panel-default">
     <div class="panel-heading">活动时间</div>
     <div class="panel-body">
-        Panel content
+        {$activity['start_time']} ~ {$activity['end_time']}
     </div>
 </div>
 
 <div class="panel panel-default">
     <div class="panel-heading">详细内容</div>
     <div class="panel-body">
-        Panel content
+        {$activity['info']}
     </div>
 </div>
 
