--- a/addons/happy_activity/template/mobile/entry.html
+++ b/addons/happy_activity/template/mobile/entry.html
@@ -20,7 +20,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">详细内容</div>
     <div class="panel-body">
-        {$activity['info']}
+        {$activity['desc']}
     </div>
 </div>
 
