--- a/addons/happy_activity/template/mobile/entry.html
+++ b/addons/happy_activity/template/mobile/entry.html
@@ -24,6 +24,6 @@
     </div>
 </div>
 
-<a class="btn btn-danger btn-block">报名</a>
+<a href="{php echo $this->createMobileUrl('join');}" class="btn btn-danger btn-block">报名</a>
 
 {template 'common/footer'}
