--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -12,20 +12,23 @@
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            <input type="text" class="form-control" id="inputEmail3" placeholder="请输入姓名">
         </div>
     </div>
     <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">性别</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
+            <select name="sex" id="" class="form-control">
+                <option value="1">男</option>
+                <option value="0">女</option>
+            </select>
         </div>
     </div>
 
     <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">手机号</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
+            <input type="text" class="form-control" id="inputPassword3" placeholder="请输入手机号">
         </div>
     </div>
 
@@ -42,7 +45,7 @@
     <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">留言</label>
         <div class="col-sm-10">
-            <input type="passwotextrd" class="form-control" id="inputPassword3" placeholder="Password">
+            <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
         </div>
     </div>
     <button>点击报名</button>
