--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -2,53 +2,53 @@
 
 
 <div class="panel panel-default">
-    <div class="panel-heading">活动时间</div>
+    <div class="panel-heading">活动时间:{$activity['start_time']} ~ {$activity['end_time']}</div>
     <div class="panel-body">
-        {$activity['start_time']} ~ {$activity['end_time']}
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入姓名">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">性别</label>
+                <div class="col-sm-10">
+                    <select name="sex" id="" class="form-control">
+                        <option value="1">男</option>
+                        <option value="0">女</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">手机号</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPassword3" placeholder="请输入手机号">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">照片</label>
+
+
+                <div class="col-sm-10">
+                    {php echo tpl_app_form_field_image('image', $image);}
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">留言</label>
+                <div class="col-sm-10">
+                    <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+            <button>点击报名</button>
+        </form>
     </div>
 
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" placeholder="请输入姓名">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">性别</label>
-            <div class="col-sm-10">
-                <select name="sex" id="" class="form-control">
-                    <option value="1">男</option>
-                    <option value="0">女</option>
-                </select>
-            </div>
-        </div>
 
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">手机号</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPassword3" placeholder="请输入手机号">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">照片</label>
-
-
-            <div class="col-sm-10">
-                {php echo tpl_app_form_field_image('image', $image);}
-            </div>
-
-        </div>
-
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">留言</label>
-            <div class="col-sm-10">
-                <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <button>点击报名</button>
-    </form>
 </div>
 
 
