--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -4,7 +4,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">活动时间:{$activity['start_time']} ~ {$activity['end_time']}</div>
     <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" method="POST" onsubmit="return validForm();">
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                 <div class="col-sm-10">
@@ -30,12 +30,9 @@
 
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">照片</label>
-
-
                 <div class="col-sm-10">
                     {php echo tpl_app_form_field_image('image', $image);}
                 </div>
-
             </div>
 
             <div class="form-group">
@@ -44,14 +41,18 @@
                     <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
-            <button>点击报名</button>
+            <input name="submit" type="submit">点击报名</input>
         </form>
     </div>
 
 
 </div>
 
+<script>
+    function validForm(){
 
+    }
+</script>
 
 
 
