--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -41,7 +41,7 @@
                     <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
-            <input name="submit" type="submit">点击报名</input>
+            <!--<input name="submit" type="submit">点击报名</input>-->
         </form>
     </div>
 
