--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -8,7 +8,7 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入姓名">
+                    <input type="text" name="username" class="form-control" id="inputEmail3" placeholder="请输入姓名">
                 </div>
             </div>
             <div class="form-group">
@@ -22,26 +22,26 @@
             </div>
 
             <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">手机号</label>
+                <label for="inputPassword3"  class="col-sm-2 control-label">手机号</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputPassword3" placeholder="请输入手机号">
+                    <input type="text" name="mobile" class="form-control" id="inputPassword3" placeholder="请输入手机号">
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">照片</label>
                 <div class="col-sm-10">
-                    {php echo tpl_app_form_field_image('image', $image);}
+                    {php echo tpl_app_form_field_image('thumb', $a);}
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">留言</label>
                 <div class="col-sm-10">
-                    <textarea name="" class="form-control" id="" cols="30" rows="10"></textarea>
+                    <textarea name="msg" class="form-control" id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
-            <input name="submit" type="submit" value="点击报名"></input>
+            <input name="submit" type="submit" value="点击报名">
             <input type="hidden" name="token" value="{$_W['token']}">
         </form>
     </div>
