--- a/addons/happy_activity/template/mobile/join.html
+++ b/addons/happy_activity/template/mobile/join.html
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-2 control-label">照片</label>
                 <div class="col-sm-10">
-                    {php echo tpl_app_form_field_image('thumb', $a);}
+                    {php echo tpl_form_field_image('thumb', $a);}
                 </div>
             </div>
 
