--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -1,1 +1,35 @@
-<h1>ssss</h1>
+{template 'common/header'}
+<div class="pane panel-default">
+    <div class="panel-heading">
+        <div class="panel-title">
+            <h1>报名记录</h1>
+        </div>
+    </div>
+    <div class="panel-body">
+
+
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+            </tr>
+            </thead>
+            <tbody>
+            {loop $res $key $item}
+            <tr>
+                <th scope="row">{$item['id']}</th>
+                <td>{$item['name']}</td>
+                <td>{php  echo $item['sex'] == 1 ?'男','女';}</td>
+                <td>{php tomedia($item['pic'])}</td>
+                <td>{$item['mobile']}</td>
+            </tr>
+            {/loop}
+            </tbody>
+        </table>
+
+    </div>
+</div>
+{template 'common/footer'}
