--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -23,7 +23,7 @@
                 <th scope="row">{$item['id']}</th>
                 <td>{$item['name']}</td>
                 <td>{php  echo $item['sex'] == 1 ?'男','女';}</td>
-                <td>{php tomedia($item['pic'])}</td>
+                <td><img src="{php echo tomedia($item['pic']);}" alt="">{</td>
                 <td>{$item['mobile']}</td>
             </tr>
             {/loop}
