--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -22,9 +22,9 @@
             <tr>
                 <th scope="row">{$item['id']}</th>
                 <td>{$item['name']}</td>
-                <td>{php  echo $item['sex'] == 1 ?'男','女';}</td>
-                <td><img src="{php echo tomedia($item['pic']);}" alt="">{</td>
-                <td>{$item['mobile']}</td>
+                <td>{php echo $item['sex'] == 1 ?'男','女';}</td>
+                <!--<td><img src="{php echo tomedia($item['pic']);}" alt="">{</td>-->
+                <!--<td>{$item['mobile']}</td>-->
             </tr>
             {/loop}
             </tbody>
