--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -18,7 +18,11 @@
             </tr>
             </thead>
             <tbody>
-           
+            {loop $res $key $item}
+            <tr>
+              
+            </tr>
+            {/loop}
             </tbody>
         </table>
 
