--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -11,10 +11,11 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>id</th>
+                <th>姓名</th>
+                <th>性别</th>
+                <th>图片</th>
+                <th>手机号</th>
             </tr>
             </thead>
             <tbody>
@@ -23,7 +24,7 @@
                 <th scope="row">{$item['id']}</th>
                 <td>{$item['name']}</td>
                 <td>{$item['sex']}</td>
-                <td><img src="{php echo tomedia($item['pic']);}" alt="">{</td>
+                <td><img src="{php echo tomedia($item['pic']);}" alt=""></td>
                 <td>{$item['mobile']}</td>
             </tr>
             {/loop}
