--- a/addons/happy_activity/template/ActivityLog.html
+++ b/addons/happy_activity/template/ActivityLog.html
@@ -30,7 +30,7 @@
             {/loop}
             </tbody>
         </table>
-
+{php echo echo pagination($total, $pindex, $psize);}
     </div>
 </div>
 {template 'common/footer'}
